--- a/opennms-icmp/opennms-icmp-jni/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms-icmp</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.2</version>
+    <version>1.3.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-icmp-jni</artifactId>
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-icmp-api</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.3-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
