--- a/opennms-rrd/opennms-rrd-api/pom.xml
+++ b/opennms-rrd/opennms-rrd-api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms-rrd</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.2</version>
+    <version>1.3.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-rrd-api</artifactId>
@@ -11,13 +11,13 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-util</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.3-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-config-utils</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.3-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
