--- a/opennms-snmp/opennms-snmp-joesnmp/pom.xml
+++ b/opennms-snmp/opennms-snmp-joesnmp/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms-snmp</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.2</version>
+    <version>1.3.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-snmp-joesnmp</artifactId>
@@ -11,13 +11,13 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-api</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.3-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-joesnmp</artifactId>
-      <version>1.3.2</version>
+      <version>1.3.3-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
