--- a/opennms-daemon/pom.xml
+++ b/opennms-daemon/pom.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project>
   <parent>
     <artifactId>opennms</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-daemon</artifactId>
@@ -47,19 +47,19 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-services</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-install</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-bootstrap</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -79,18 +79,18 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-import</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-rrd-jrobin</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-rrdtool-api</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -110,13 +110,13 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-joesnmp</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-snmp4j</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <!-- this is a runtime depdency we need at install time -->
@@ -137,7 +137,7 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-qosdaemon</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>1.3.2-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
