--- a/tools/packages/opennms/opennms.spec.in
+++ b/tools/packages/opennms/opennms.spec.in
@@ -38,7 +38,7 @@
 %if "%{platform}" == "linux-centos-3"
 %define	initdir		/etc
 %define psql_service	rhdb
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{rreleasenumber}_centos3
 %define platform_match	true
 %endif
@@ -46,7 +46,7 @@
 %if "%{platform}" == "linux-centos-4"
 %define initdir         /etc
 %define psql_service    rhdb
-%define requires        postgresql-server >= 7.3
+%define requires        postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_centos4
 %define platform_match  true
 %endif
@@ -54,7 +54,7 @@
 %if "%{platform}" == "linux-fedora-1"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_fc1
 %define platform_match	true
 %endif
@@ -62,7 +62,7 @@
 %if "%{platform}" == "linux-fedora-2"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_fc2
 %define platform_match	true
 %endif
@@ -70,7 +70,7 @@
 %if "%{platform}" == "linux-fedora-3"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_fc3
 %define platform_match	true
 %endif
@@ -78,7 +78,7 @@
 %if "%{platform}" == "linux-fedora-4"
 %define initdir         /etc
 %define psql_service    postgresql
-%define requires        postgresql-server >= 7.3
+%define requires        postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_fc4
 %define platform_match  true
 %endif
@@ -102,7 +102,7 @@
 %if "%{platform}" == "linux-mandrake-7"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_mdk7
 %define platform_match	true
 %endif
@@ -110,7 +110,7 @@
 %if "%{platform}" == "linux-mandrake-8"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_mdk8
 %define platform_match	true
 %endif
@@ -118,7 +118,7 @@
 %if "%{platform}" == "linux-mandrake-90"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_mdk90
 %define platform_match	true
 %endif
@@ -126,7 +126,7 @@
 %if "%{platform}" == "linux-mandrake-92"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3, postgresql-pl >= 7.3
+%define requires	postgresql-server >= 7.4, postgresql-pl >= 7.4
 %define release_pkg     %{releasenumber}_mdk92
 %define platform_match	true
 %endif
@@ -134,7 +134,7 @@
 %if "%{platform}" == "linux-mandrake-10"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3, postgresql-pl >= 7.3
+%define requires	postgresql-server >= 7.4, postgresql-pl >= 7.4
 %define release_pkg     %{releasenumber}_mdk10
 %define platform_match	true
 %endif
@@ -142,7 +142,7 @@
 %if "%{platform}" == "linux-redhat-7"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires        postgresql-server >= 7.3
+%define requires        postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_rhl7
 %define platform_match	true
 %endif
@@ -150,7 +150,7 @@
 %if "%{platform}" == "linux-redhat-8"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_rhl8
 %define platform_match	true
 %endif
@@ -158,7 +158,7 @@
 %if "%{platform}" == "linux-redhat-9"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_rhl9
 %define platform_match	true
 %endif
@@ -166,7 +166,7 @@
 %if "%{platform}" == "linux-rhel-3"
 %define	initdir		/etc
 %define psql_service	rhdb
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_rhel3
 %define platform_match	true
 %endif
@@ -174,7 +174,7 @@
 %if "%{platform}" == "linux-rhel-4"
 %define	initdir		/etc
 %define psql_service	rhdb
-%define requires	postgresql-server >= 7.3
+%define requires	postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_rhel4
 %define platform_match	true
 %endif
@@ -182,7 +182,7 @@
 %if "%{platform}" == "linux-suse-7"
 %define	initdir		/etc/rc.d
 %define psql_service	postgres
-%define requires        postgres >= 7.3
+%define requires        postgres >= 7.4
 %define release_pkg     %{releasenumber}_suse7
 %define platform_match	true
 %endif
@@ -190,7 +190,7 @@
 %if "%{platform}" == "linux-suse-8"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql >= 7.3, postgresql-server >= 7.3
+%define requires	postgresql >= 7.4, postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_suse8
 %define platform_match	true
 %endif
@@ -198,7 +198,7 @@
 %if "%{platform}" == "linux-suse-9"
 %define	initdir		/etc
 %define psql_service	postgresql
-%define requires	postgresql >= 7.3, postgresql-server >= 7.3
+%define requires	postgresql >= 7.4, postgresql-server >= 7.4
 %define release_pkg     %{releasenumber}_suse9
 %define platform_match	true
 %endif
@@ -351,6 +351,8 @@ rm -rf $RPM_BUILD_ROOT%{instprefix}/etc/README.build
 
 ### symlinks for system dirs to %{instprefix}
 
+rm $RPM_BUILD_ROOT%{instprefix}/logs/.readme
+rmdir $RPM_BUILD_ROOT%{instprefix}/logs
 ln -sf %{logdir} $RPM_BUILD_ROOT%{instprefix}/logs
 ln -sf %{sharedir} $RPM_BUILD_ROOT%{instprefix}/share
 
@@ -441,8 +443,8 @@ echo " *** install guide and release notes for details."
 
 %changelog
 * Fri Jan 05 2007 DJ Gregor <dj@opennms.org>
-- Change the postgresql versions to 7.3.  The installer will not work
-  with anything earlier than 7.3.
+- Change the postgresql versions to 7.4.  The installer will not work
+  with anything earlier than 7.4.
 - Add WEB-INF/configuration.properties in the webapp as a configuration
   file.
 - Fix up a comment to reflect the current name of the opennms startup script.
