--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>opennms</artifactId>
-  <version>1.3.2-SNAPSHOT</version>
+  <version>1.3.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>OpenNMS</name>
   <url>http://opennms.org</url>
@@ -150,22 +149,17 @@
               <tasks>
                 <!-- I have to explicitly set Ant properties from Maven
                      properties.  They aren't passed automatically, even
-                     when inheritAll="true" is used with <ant/>.  -->
+                     when inheritAll="true" is used with <ant />.  -->
                 <ant target="compile.check">
-                  <property name="java.vm.version" value="${java.vm.version}"/>
-                  <property name="java.home" value="${java.home}"/>
-                  <property name="platform" value="${platform}"/>
-                  <property name="platform.jdk.include.dir"
-                            value="${platform.jdk.include.dir}"/>
-                  <property name="platform.javahOS"
-                            value="${platform.javahOS}"/>
-                  <property name="build.rrd.include.dir"
-                            value="${build.rrd.include.dir}"/>
-                  <property name="build.rrd.lib.dir"
-                            value="${build.rrd.lib.dir}"/>
-                  <property name="build.postgresql.include.dir"
-                            value="${build.postgresql.include.dir}"/>
-                  <property name="platform.shlib" value="${platform.shlib}"/>
+                  <property name="java.vm.version" value="${java.vm.version}" />
+                  <property name="java.home" value="${java.home}" />
+                  <property name="platform" value="${platform}" />
+                  <property name="platform.jdk.include.dir" value="${platform.jdk.include.dir}" />
+                  <property name="platform.javahOS" value="${platform.javahOS}" />
+                  <property name="build.rrd.include.dir" value="${build.rrd.include.dir}" />
+                  <property name="build.rrd.lib.dir" value="${build.rrd.lib.dir}" />
+                  <property name="build.postgresql.include.dir" value="${build.postgresql.include.dir}" />
+                  <property name="platform.shlib" value="${platform.shlib}" />
                 </ant>
               </tasks>
             </configuration>
@@ -448,7 +442,7 @@ opennms.home = ${opennms.home}
     <install.pid.file>${install.dir}/logs/opennms.pid</install.pid.file>
 
     <!-- install.prefix: a prefix used for installation in or chroot -->
-    <install.prefix></install.prefix>
+    <install.prefix />
     
     <install.postgresql.service>postgresql</install.postgresql.service>
     <install.database.name>opennms</install.database.name>
@@ -465,10 +459,10 @@ opennms.home = ${opennms.home}
   
     <!-- platform specific -->
     <build.soext>${platform.shlib}</build.soext>
-    <build.jni.compiler.arg></build.jni.compiler.arg>
-    <build.jni.linker.arg></build.jni.linker.arg>
-    <build.postgresql.compiler.arg></build.postgresql.compiler.arg>
-    <build.postgresql.linker.arg></build.postgresql.linker.arg>
+    <build.jni.compiler.arg />
+    <build.jni.linker.arg />
+    <build.postgresql.compiler.arg />
+    <build.postgresql.linker.arg />
     
     <!-- rpm specific -->
     <rpm.install.dir>/opt/OpenNMS</rpm.install.dir>
@@ -477,7 +471,7 @@ opennms.home = ${opennms.home}
     <rpm.sign>false</rpm.sign>
     <rpm.buildtests>false</rpm.buildtests>
     <rpm.database.user>opennms</rpm.database.user>
-    <rpm.additional.args></rpm.additional.args> 
+    <rpm.additional.args /> 
     <rpm.database.name>opennms</rpm.database.name>
     <rpm.database.password>opennms</rpm.database.password>
 
@@ -490,9 +484,9 @@ opennms.home = ${opennms.home}
    <webstart.keystore.delete>true</webstart.keystore.delete>
    <webstart.keygen>true</webstart.keygen>
    <webstart.dnameCn>${user.name}</webstart.dnameCn>
-   <webstart.dnameL></webstart.dnameL>
-   <webstart.dnameSt></webstart.dnameSt>
-   <webstart.dnameC></webstart.dnameC>
+   <webstart.dnameL />
+   <webstart.dnameSt />
+   <webstart.dnameC />
 
   </properties>
 
