fix rrdtool-api dependency

--- a/pom.xml
+++ b/pom.xml
@@ -963,6 +963,11 @@ opennms.home = ${opennms.home}
       </dependency>
       <dependency>
         <groupId>org.opennms</groupId>
+        <artifactId>opennms-rrdtool-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms</groupId>
         <artifactId>opennms-rrd-jrobin</artifactId>
         <version>${project.version}</version>
       </dependency>
