fix jni versions

--- a/opennms-daemon/pom.xml
+++ b/opennms-daemon/pom.xml
@@ -63,6 +63,7 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-iplike-${platform}</artifactId>
       <type>${platform.shlib}</type>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -89,12 +90,14 @@
       <groupId>org.opennms</groupId>
       <artifactId>opennms-rrdtool-jni-${platform}</artifactId>
       <type>${platform.jni}</type>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-icmp-jni-${platform}</artifactId>
       <type>${platform.jni}</type>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
