--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>opennms</artifactId>
-  <version>1.3.3-SNAPSHOT</version>
+  <version>1.3.2</version>
   <packaging>pom</packaging>
   <name>OpenNMS</name>
   <url>http://opennms.org</url>
@@ -70,9 +70,9 @@
     </mailingList>
   </mailingLists>
   <scm>
-    <connection>scm:svn:https://svn.sourceforge.net/svnroot/opennms/opennms/trunk</connection>
-    <developerConnection>scm:svn:https://svn.sourceforge.net/svnroot/opennms/opennms/trunk</developerConnection>
-    <url>http://svn.sourceforge.net/viewcvs.cgi/opennms/opennms/trunk</url>
+    <connection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/tags/1.3.2</connection>
+    <developerConnection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/tags/1.3.2</developerConnection>
+    <url>https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/tags/1.3.2</url>
   </scm>
   <modules>
     <module>opennms-test</module>
@@ -135,7 +135,7 @@
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
           <preparationGoals>clean install</preparationGoals>
-          <arguments>-Droot.dir=${basedir}</arguments>
+          <arguments>-Droot.dir=${basedir} -Dmaven.test.skip=true</arguments>
           <tagBase>https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/tags</tagBase>
        </configuration>
      </plugin>
