--- a/pom.xml
+++ b/pom.xml
@@ -1399,6 +1399,10 @@ opennms.home = ${opennms.home}
             <groupId>asm</groupId>
             <artifactId>asm-attrs</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
