--- a/opennms-webapp/pom.xml
+++ b/opennms-webapp/pom.xml
@@ -10,6 +10,15 @@
   <packaging>war</packaging>
   <name>OpenNMS Web Application</name>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <filtering>true</filtering>
+        <directory>src/main/filtered</directory>
+      </resource>
+    </resources>
     <plugins>
      <plugin>
         <groupId>org.codehaus.mojo</groupId>
