Bug 1786: make sure jmta is part of the webapp

--- a/opennms-webapp/pom.xml
+++ b/opennms-webapp/pom.xml
@@ -140,6 +140,10 @@
       <artifactId>opennms-util</artifactId>
     </dependency>
     <dependency>
+      <groupId>alt.dev.jmta</groupId>
+      <artifactId>jmta</artifactId>
+    </dependency>
+    <dependency>
       <groupId>batik</groupId>
       <artifactId>batik-dom</artifactId>
     </dependency>
