--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -1,10 +1,122 @@
 ############################################################################
 # map.properties
 #--------------------------------------------------------------------------
-# This file defines the visualization information for the maps.
+# This file defines system and visualization settings for Maps System.
 #
 ###########################################################################
 
+
+###########################################################################
+## F A C T O R I E S  
+###########################################################################
+#
+# Here you can define 'factories' for maps storage operations.
+# If no factories are defined, the system will use OpenNMS database to store maps.  
+#
+# If you want to define factories, you have to define:
+#
+# - A comma-separated list of factories.
+# 
+# - For each factory:  
+# 	- factory.{KEY}.managerclass (must extend org.opennms.web.map.dataaccess.Manager): for delete/save maps and map's elements.
+#	- factory.{KEY}.adminmodify: if true, make maps opened with this factory editable by admin users. Default value is true. If false, allmodify is considered false too.
+#	- factory.{KEY}.allmodify: if true, make maps opened with this factory editable by all users. Default value is false
+#	- factory.{KEY}.source: a defined source to retrieve data for matching nodes.
+#	- factory.{KEY}.reload: if true, reload map instead of refresh (default is false)
+#	- factory.{KEY}.contextmenu: if false, disable context menu for node elements (default is true)
+#	- factory.{KEY}.doubleclick: if false, disable double click for node elements (default is true)
+# 	- A comma-separated list of context menu commands (skipped if contextmenu is disabled):
+# 		factory.{KEY}.cmenu.commands=COMMAND1,COMMAND2,...,COMMANDN 
+# 		for each command:
+#		factory.{KEY}.cmenu.{COMMAND1}.link: link to the page to open (you can use the special words 'ELEMENT_ID' and 'ELEMENT_LABEL'
+# 											 to use the selected map element's id or label as argument of the linked page)
+#		factory.{KEY}.cmenu.{COMMAND1}.params: (javascript window.open() ) params for the window containing the page
+#		- to insert a separator in the context menu, use the character '-' as command and omit link and params.
+#		- link is a parameter mandatory, params is optional
+# 	- A comma-separated list of params:
+# 		factory.{KEY}.params=PARAM1,PARAM2,...,PARAMN 
+# 		factory.{KEY}.param.{PARAM1}
+# 		factory.{KEY}.param.{PARAM2}
+# 		...
+# - Also, you must define the default factory 
+# 	default.factory={KEY} 
+#
+# !NOTE that: managerclass is  mandatory for each factory	!
+# !           default.factory is mandatory					!  
+
+
+factories=opennms
+
+factory.opennms.managerclass=org.opennms.web.map.dataaccess.DBManager
+factory.opennms.params=driver,url,user,password,maptable,elementtable
+factory.opennms.param.driver=org.postgresql.Driver
+factory.opennms.param.url=jdbc:postgresql://localhost:5432/opennms
+factory.opennms.param.user=opennms
+factory.opennms.param.password=opennms
+factory.opennms.param.maptable=map
+factory.opennms.param.elementtable=element
+factory.opennms.cmenu.commands=Ping,Traceroute,-,Events
+factory.opennms.cmenu.Ping.link=map/response/ping.jsp?node=ELEMENT_ID
+factory.opennms.cmenu.Ping.params=toolbar,width=300,height=300, left=0, top=0, scrollbars=1, resizable=1
+factory.opennms.cmenu.Traceroute.link=map/response/traceroute.jsp?node=ELEMENT_ID
+factory.opennms.cmenu.Traceroute.params=toolbar,width=300,height=300, left=0, top=0, scrollbars=1, resizable=1
+factory.opennms.cmenu.Events.link=event/list?filter=node%3DELEMENT_ID
+factory.opennms.cmenu.Events.params=toolbar,width=640,height=480, left=0, top=0, scrollbars=1, resizable=1
+
+
+default.factory=opennms
+
+
+###########################################################################
+## S O U R C E S   
+###########################################################################
+#
+# Here you can define alternative sources to get data from.
+# 
+# To retrieve data (severity, status) for a node, the system will use the first (in order) source
+# defined matching (filters) the one.  
+# 
+# You have to define:
+# - A comma-separated list of sources.
+#
+# - For each source, optional filters (opennms database fields)
+#   to discriminate nodes for which to use the alternative source. 
+#
+# - A optional comma-separated list of filters. 
+# 	source.server.filters=FILTER-ID1,FILTER-ID2,...,FILTER-IDN
+#
+# - A optional list of filters for each source:
+#  	- At least first filter table must contain nodeid field.
+#  	- Filters are applied by AND logical operator
+# 	source.{KEY}.filter.{FILTER-ID1}.table,
+# 	source.{KEY}.filter.{FILTER-ID1}.condition,
+# 	...
+#
+# - The class to invoke to get data to (must extend org.opennms.web.map.datasources.DataSource), and a list of parameters for the class.
+# 	source.{KEY}.class,
+# 
+# - A comma-separated list of params.
+# 	source.{KEY}.params=PARAM1,PARAM2,...,PARAMN 
+# 	source.{KEY}.param.{PARAM1}
+# 	source.{KEY}.param.{PARAM2}
+# 	...
+#
+# !NOTE that class is mandatory for each source!
+# 
+
+sources=server 
+
+source.server.filters=1,2
+source.server.filter.1.table=assets
+source.server.filter.1.condition=displaycategory='server'
+source.server.filter.2.table=ipinterface
+source.server.filter.2.condition=iplike(ipaddr,'10.*.*.*')
+source.server.class=org.opennms.web.map.datasources.ServerDataSource
+source.server.params=driver,url,user,password
+source.server.param.driver=jdbc.Driver
+source.server.param.url=jdbc:address
+source.server.param.user=user
+source.server.param.password=passwd
 
 ###########################################################################
 ## S E V E R I T I E S    
@@ -15,6 +127,18 @@
 # severity.{KEY}.label,
 # severity.{KEY}.flash default false
 # property must be set for each key in this property.
+# properties severity.default and severity.indeterminate are mandatory
+# Severities must be ordered from worst to best (i.e.: critical.id < minor.id < normal.id, etc.)
+# and must be a continous sequence of interger
+#
+# Also, you can define the way to calculate severity for (sub)Maps.
+# property 'severity.map' may be 
+#	-'worst': gets the worst severity of the elements of the map
+#	-'avg':   calculates the severity of the map as the average severity of all the elements of the map
+#	-'best':  gets the best severity of the elements of the map
+# default value='avg'
+ 
+
 severities=critical,major,minor,warning,normal,cleared,indeterminate
 
 severity.critical.id=0
@@ -35,19 +159,23 @@ severity.warning.id=3
 severity.warning.label=Warning
 severity.warning.color=cyan
 
-severity.cleared.id=4
-severity.cleared.label=Cleared
-severity.cleared.color=white
-
-severity.indeterminate.id=5
-severity.indeterminate.label=Indeterminate
-severity.indeterminate.color=lightblue
-
-severity.normal.id=6
+severity.normal.id=4
 severity.normal.label=Normal
 severity.normal.color=green
 
+severity.cleared.id=5
+severity.cleared.label=Cleared
+severity.cleared.color=white
+
+severity.indeterminate.id=6
+severity.indeterminate.label=Indeterminate
+severity.indeterminate.color=lightblue
+
+
 severity.default=normal
+severity.indeterminate=indeterminate
+
+severity.map=worst
 
 ###########################################################################
 ## S T A T U S
@@ -57,8 +185,9 @@ severity.default=normal
 # status.{KEY}.uei and 
 # status.{KEY}.color 
 # status.{KEY}.text property must be set for each key in this property.
+# Statuses must be ordered from worst to best (i.e.: nodedown.id < nodeup.id, etc.)
 
-statuses=nodeup,nodedown,interfacedown,servicedown,linkup,linkdown,undefined
+statuses=nodeup,nodedown,interfacedown,servicedown,linkup,linkdown,undefined,open,ack,assigned
 
 status.nodedown.id=0
 status.nodedown.color=red
@@ -95,6 +224,25 @@ status.linkup.uei=uei.opennms.org/generic/traps/SNMP_Link_Up
 status.linkup.color=green
 status.linkup.text=SNMPLinkUp
 
+status.open.id=7
+status.open.uei=OPEN
+status.open.color=red
+status.open.text=Alarm Open
+
+status.close.id=8
+status.close.uei=CLOSED
+status.close.color=green
+status.close.text=Alarm Closed
+
+status.ack.id=9
+status.ack.uei=ACK
+status.ack.color=orange
+status.ack.text=Alarm Acknowledged
+
+status.assigned.id=10
+status.assigned.uei=ASSIGNED
+status.assigned.color=yellow
+status.assigned.text=Alarm Assigned
 
 // status.default and status.unknown.uei are required values
 // they should be equals to defined statuses
@@ -110,6 +258,9 @@ status.unknown.uei=undefined
 # avail.{KEY}.min  
 # avail.{KEY}.color 
 # avail.{KEY}.flash default false
+#
+# avail.undefined is mandatory
+
 availabilities=normal,warning,critical,undefined
 
 avail.normal.id=0
@@ -125,13 +276,14 @@ avail.critical.min=0
 avail.critical.color=red
 avail.critical.flash=true
 
+# avail.undefined is mandatory
 avail.undefined.id=3
 avail.undefined.min=-1
 avail.undefined.color=grey
 
 # default is true
 # setting to false speed up open and refresh map
-#avail.enable=false
+avail.enable=false
 #this field is mandatory
 avail.enable.false.id=3
 
@@ -163,6 +315,7 @@ icon.router.filename=router.svg
 icon.switch.filename=switch.svg
 icon.vax.filename=vax.svg
 
+
 // icon.default.map and icon.default.node are required values
 // they should be equals to defined icons
 icon.default.map=map
@@ -174,7 +327,7 @@ icon.default.node=unspecified
 ###########################################################################
 # A comma-separated list of bgimages keys. 
 # bgimages.{KEY}.filename
-bgimages=napoli,italia,abruzzo,basilicata,calabria,campania,emilia romagna,friuli,lazio,liguria,lombardia,molise,marche,piemonte,puglia,sicilia,sardegna,trentino,toscana,umbria,valle d'aosta,veneto
+bgimages=napoli,italia,abruzzo,basilicata,calabria,campania,emilia_romagna,friuli,lazio,liguria,lombardia,molise,marche,piemonte,puglia,sicilia,sardegna,trentino,toscana,umbria,valle_d_aosta,veneto
 
 bgimage.napoli.filename=napoli.gif
 bgimage.italia.filename=italia.jpg
@@ -182,7 +335,7 @@ bgimage.abruzzo.filename=abruzzo.jpg
 bgimage.basilicata.filename=basilicata.jpg
 bgimage.calabria.filename=calabria.jpg
 bgimage.campania.filename=campania.jpg
-bgimage.emilia romagna.filename=emilia_romagna.jpg
+bgimage.emilia_romagna.filename=emilia_romagna.jpg
 bgimage.friuli.filename=friuli.jpg
 bgimage.lazio.filename=lazio.jpg
 bgimage.liguria.filename=liguria.jpg
@@ -196,16 +349,5 @@ bgimage.sardegna.filename=sardegna.jpg
 bgimage.trentino.filename=trentino.jpg
 bgimage.toscana.filename=toscana.jpg
 bgimage.umbria.filename=umbria.jpg
-bgimage.valle d'aosta.filename=valle_daosta.jpg
+bgimage.valle_d_aosta.filename=valle_d_aosta.jpg
 bgimage.veneto.filename=veneto.jpg
-
-
-
-###########################################################################
-## A S S E T   I N F O R M A T I O N S
-###########################################################################
-# A comma-separated list of asset keys to determinate which assets fields 
-# view on selecting a map element.
-
-assets=region, city, location
-
