--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -18,7 +18,7 @@
 # - A comma-separated list of factories.
 # 
 # - For each factory:  
-# 	- factory.{KEY}.managerclass (must extend org.opennms.web.map.dataaccess.Manager): for delete/save maps and map's elements.
+# 	- factory.{KEY}.managerclass (must extend org.opennms.web.map.db.Manager): for delete/save maps and map's elements.
 #	- factory.{KEY}.adminmodify: if true, make maps opened with this factory editable by admin users. Default value is true. If false, allmodify is considered false too.
 #	- factory.{KEY}.allmodify: if true, make maps opened with this factory editable by all users. Default value is false
 #	- factory.{KEY}.source: a defined source to retrieve data for matching nodes.
@@ -47,7 +47,7 @@
 
 factories=opennms
 
-factory.opennms.managerclass=org.opennms.web.map.dataaccess.DBManager
+factory.opennms.managerclass=org.opennms.web.map.db.DBManager
 factory.opennms.params=driver,url,user,password,maptable,elementtable
 factory.opennms.param.driver=org.postgresql.Driver
 factory.opennms.param.url=jdbc:postgresql://localhost:5432/opennms
