--- a/opennms-test/pom.xml
+++ b/opennms-test/pom.xml
@@ -18,5 +18,9 @@
       <artifactId>junit</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+    </dependency>
   </dependencies>
 </project>
