--- a/opennms-test/pom.xml
+++ b/opennms-test/pom.xml
@@ -21,6 +21,7 @@
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
