--- a/opennms-correlation/opennms-correlator/pom.xml
+++ b/opennms-correlation/opennms-correlator/pom.xml
@@ -32,7 +32,7 @@
 -->
 <project>
   <parent>
-    <artifactId>opennms</artifactId>
+    <artifactId>opennms-correlation</artifactId>
     <groupId>org.opennms</groupId>
     <version>1.3.3-SNAPSHOT</version>
   </parent>
@@ -55,14 +55,12 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-dao</artifactId>
-      <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-services</artifactId>
-      <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -96,6 +94,7 @@
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>postgresql</groupId>
