Create drools correlation engine project and add it to the build Checking stub engine and sample CorrelationExample with rules file

--- a/opennms-correlation/pom.xml
+++ b/opennms-correlation/pom.xml
@@ -10,5 +10,6 @@
   <name>OpenNMS Correlation Engines</name>
   <modules>
     <module>opennms-correlator</module>
+    <module>drools-correlation-engine</module>
   </modules>
 </project>
