Add correlator and correlation-engine to installed package

--- a/opennms-daemon/pom.xml
+++ b/opennms-daemon/pom.xml
@@ -51,6 +51,14 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-correlator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>drools-correlation-engine</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>opennms-install</artifactId>
       <scope>compile</scope>
     </dependency>
