Support for setting the layoutApplicationsVertically property on the distributedStatusService

--- a/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
+++ b/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
@@ -11,3 +11,4 @@ rrd.base.dir=@install.share.dir@/rrd
 rrd.binary=@install.rrdtool.bin@
 version.full=@install.version@
 ksc.default.graphsPerLine=1
+distributed.layoutApplicationsVertically=false
