added resource graphs to contextmenu of maps

--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -55,13 +55,15 @@ factory.opennms.param.user=opennms
 factory.opennms.param.password=opennms
 factory.opennms.param.maptable=map
 factory.opennms.param.elementtable=element
-factory.opennms.cmenu.commands=Ping,Traceroute,-,Events
+factory.opennms.cmenu.commands=Ping,Traceroute,-,Events,Resource%20Graphs
 factory.opennms.cmenu.Ping.link=map/response/ping.jsp?node=ELEMENT_ID
 factory.opennms.cmenu.Ping.params=toolbar,width=300,height=300, left=0, top=0, scrollbars=1, resizable=1
 factory.opennms.cmenu.Traceroute.link=map/response/traceroute.jsp?node=ELEMENT_ID
 factory.opennms.cmenu.Traceroute.params=toolbar,width=300,height=300, left=0, top=0, scrollbars=1, resizable=1
 factory.opennms.cmenu.Events.link=event/list?filter=node%3DELEMENT_ID
 factory.opennms.cmenu.Events.params=toolbar,width=640,height=480, left=0, top=0, scrollbars=1, resizable=1
+factory.opennms.cmenu.Resource%20Graphs.link=graph/chooseresource.htm?parentResourceType=node&parentResource=ELEMENT_ID&reports=all
+factory.opennms.cmenu.Resource%20Graphs.params=toolbar,width=640,height=480, left=0, top=0, scrollbars=1, resizable=1
 
 
 default.factory=opennms
