Introduced new link properties

--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -178,9 +178,51 @@ severity.default=normal
 severity.indeterminate=indeterminate
 
 severity.map=worst
+###########################################################################
+## L I N K S
+###########################################################################
+
+# A comma-separated list of link keys.  A link.{KEY}.id 
+# link.{KEY}.speed and 
+# link.{KEY}.color 
+# link.{KEY}.text 
+# link.{KEY}.width
+# link.{KEY}.shape
+# link.{KEY}.if
+#property must be set for each key in this property.
+links= ethernet,fastethernet,gigaethernet,serial,framerelay,isdn,dsl
+
+link.ethernet.id=0
+link.ethernet.text=Ethernet
+link.ethernet.speed=10
+link.ethernet.width=1
+link.ethernet.shape=line
+
+link.fastethernet.id=1
+link.fastethernet.text= Fast Ethernet
+link.fastethernet.speed=100
+link.fastethernet.width=2
+link.fastethernet.shape=line
+
+link.gigaethernet.id=2
+link.gigaethernet.text= GigaBit Ethernet
+link.gigaethernet.speed=1000
+link.gigaethernet.width=3
+link.gigaethernet.shape=line
+
+link.gigaethernet.id=3
+link.gigaethernet.text= Serial Line
+link.gigaethernet.speed=64
+link.gigaethernet.width=1
+link.gigaethernet.shape=tratteggiata
 
 ###########################################################################
-## S T A T U S
+## L I N K  S T A T U S
+###########################################################################
+linkstatuses=up,down
+
+###########################################################################
+## N O D E  S T A T U S
 ###########################################################################
 
 # A comma-separated list of statutes keys.  A status.{KEY}.id 
