--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -178,48 +178,62 @@ severity.default=normal
 severity.indeterminate=indeterminate
 
 severity.map=worst
+
+
 ###########################################################################
 ## L I N K S
 ###########################################################################
 
 # A comma-separated list of link keys.  A link.{KEY}.id 
-# link.{KEY}.speed and 
-# link.{KEY}.color 
+# link.{KEY}.speed 
 # link.{KEY}.text 
 # link.{KEY}.width
-# link.{KEY}.shape
-# link.{KEY}.if
+# link.{KEY}.dasharray (optional): define the outline style of the line. Valid values are 1,2,3... 
+
 #property must be set for each key in this property.
-links= ethernet,fastethernet,gigaethernet,serial,framerelay,isdn,dsl
+links=ethernet,fastethernet,gigaethernet,serial,framerelay,isdn,dsl
 
 link.ethernet.id=0
 link.ethernet.text=Ethernet
 link.ethernet.speed=10
 link.ethernet.width=1
-link.ethernet.shape=line
+
 
 link.fastethernet.id=1
 link.fastethernet.text= Fast Ethernet
 link.fastethernet.speed=100
 link.fastethernet.width=2
-link.fastethernet.shape=line
+
 
 link.gigaethernet.id=2
 link.gigaethernet.text= GigaBit Ethernet
 link.gigaethernet.speed=1000
 link.gigaethernet.width=3
-link.gigaethernet.shape=line
 
-link.gigaethernet.id=3
-link.gigaethernet.text= Serial Line
-link.gigaethernet.speed=64
-link.gigaethernet.width=1
-link.gigaethernet.shape=tratteggiata
+link.serial.id=3
+link.serial.text= Serial Line
+link.serial.speed=64
+link.serial.width=1
+link.serial.dash-array=1
+
+
+link.serial.id=4
+link.serial.text= Frame Relay
+link.serial.speed=64
+link.serial.width=1
+link.serial.dash-array=3
 
 ###########################################################################
 ## L I N K  S T A T U S
 ###########################################################################
+# A comma-separated list of linkstatuses keys.  
+# linkstatus.{KEY}.color 
+# linkstatus.{KEY}.flash (optional, default is false): if true, the link flashes
+
 linkstatuses=up,down
+linkstatus.up.color=green
+linkstatus.down.color=red
+linkstatus.down.flash=true
 
 ###########################################################################
 ## N O D E  S T A T U S
