--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -217,11 +217,11 @@ link.serial.width=1
 link.serial.dash-array=1
 
 
-link.serial.id=4
-link.serial.text= Frame Relay
-link.serial.speed=64
-link.serial.width=1
-link.serial.dash-array=3
+link.framerelay.id=4
+link.framerelay.text= Frame Relay
+link.framerelay.speed=64
+link.framerelay.width=1
+link.framerelay.dash-array=3
 
 ###########################################################################
 ## L I N K  S T A T U S
