Added reports for some Ascend OIDs.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -45,6 +45,7 @@ mib2.ups-temp, \
 mib2printer.lifeCount, mib2printer.powerOnCount, \
 mib2.storage.usage, \
 apc.load, apc.percent, apc.temp, apc.time, apc.vac, \
+ascend.acalls, ascend.dcalls, \
 checkpoint.pktsAccepted, checkpoint.pktsDropped, checkpoint.pktsLogged, checkpoint.pktsRejected, \
 checkpoint.pktsEncrypted, checkpoint.pktsEncryptedErr, checkpoint.pktsOtherErr, checkpoint.connections, \
 cisco.aironet.clientsassociated, cisco.altigaactsess, cisco.altigacpu, cisco.altigafanspeed, cisco.altigatemp, \
@@ -684,6 +685,40 @@ report.apc.vac.command=--title="APC UPS VAC In/Out" \
  GPRINT:vacOut:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:vacOut:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:vacOut:MAX:"Max  \\: %8.2lf %s\\n"
+
+######
+###### Reports for Ascend Devices
+######
+
+report.ascend.acalls.name=Ascend Analog Calls
+report.ascend.acalls.columns=callCurrentAlogOut, callCurrentAlogIn
+report.ascend.acalls.type=nodeSnmp
+report.ascend.acalls.command=--title="Ascend Analog Calls In/Out" \
+ DEF:callsOut={rrd1}:callCurrentAlogOut:AVERAGE \
+ DEF:callsIn={rrd2}:callCurrentAlogIn:AVERAGE \
+ LINE2:callsOut#0000ff:"Calls Out" \
+ GPRINT:callsOut:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:callsOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:callsOut:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:callsIn#ff0000:"Calls In" \
+ GPRINT:callsIn:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:callsIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:callsIn:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.ascend.dcalls.name=Ascend Digital Calls
+report.ascend.dcalls.columns=callCurrentDigOut, callCurrentDigIn
+report.ascend.dcalls.type=nodeSnmp
+report.ascend.dcalls.command=--title="Ascend Digital Calls In/Out" \
+ DEF:callsOut={rrd1}:callCurrentDigOut:AVERAGE \
+ DEF:callsIn={rrd2}:callCurrentDigIn:AVERAGE \
+ LINE2:callsOut#0000ff:"Calls Out" \
+ GPRINT:callsOut:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:callsOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:callsOut:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:callsIn#ff0000:"Calls In" \
+ GPRINT:callsIn:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:callsIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:callsIn:MAX:"Max  \\: %8.2lf %s\\n"
 
 ######
 ###### Reports Generated from Checkpoint Devices
