--- a/opennms-daemon/pom.xml
+++ b/opennms-daemon/pom.xml
@@ -86,6 +86,11 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-reporting</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>opennms-rrd-jrobin</artifactId>
       <scope>compile</scope>
     </dependency>
