Move groovy eclipse settings into an additionalConfig tag in pom.xml for the maven-eclipse-plugin.  Modify svn:ignore to contain: target .project .settings .classpath

--- a/opennms-webstart/pom.xml
+++ b/opennms-webstart/pom.xml
@@ -105,6 +105,15 @@
           <additionalProjectnatures>
             <projectnature>org.codehaus.groovy.eclipse.groovyNature</projectnature>
           </additionalProjectnatures>
+          <additionalConfig>
+            <file>
+              <name>.settings/org.codehaus.groovy.eclipse.preferences.prefs</name>
+              <content><![CDATA[#Added by maven-eclipse-plugin
+eclipse.preferences.version=1
+groovy.compiler.output.path=target/classes
+]]></content>
+            </file>
+          </additionalConfig>
         </configuration>
       </plugin>
     </plugins>
