Fix for bugzilla bug #1815.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -2825,9 +2825,9 @@ report.novell.diskSpaceSys.type=nodeSnmp
 report.novell.diskSpaceSys.command=--title="Disk Space on SYS" \
  --units-exponent 0 \
  DEF:free={rrd1}:freeSpaceOnSys:AVERAGE \
- CDEF:freeMB=free,1024,/,1024,/ \
+ CDEF:freeMB=free,1024,/ \
  DEF:freeable={rrd2}:freeableSpaceOnSys:AVERAGE \
- CDEF:freeableMB=freeable,1024,/,1024,/ \
+ CDEF:freeableMB=freeable,1024,/ \
  LINE2:freeMB#0000ff:"Free Space (MBytes)" \
  GPRINT:freeMB:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:freeMB:MIN:"Min  \\: %8.2lf %s" \
@@ -2842,9 +2842,9 @@ report.novell.diskSpaceVol2.columns=freeSpaceOnVol2,freeableSpaceOnVol2
 report.novell.diskSpaceVol2.type=nodeSnmp
 report.novell.diskSpaceVol2.command=--title="Disk Space on Second Volume" \
  DEF:free={rrd1}:freeSpaceOnVol2:AVERAGE \
- CDEF:freeMB=free,1024,/,1024,/ \
+ CDEF:freeMB=free,1024,/ \
  DEF:freeable={rrd2}:freeableSpaceOnVol2:AVERAGE \
- CDEF:freeableMB=freeable,1024,/,1024,/ \
+ CDEF:freeableMB=freeable,1024,/ \
  LINE2:freeMB#0000ff:"Free Space (MBytes)" \
  GPRINT:freeMB:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:freeMB:MIN:"Min  \\: %8.2lf %s" \
