Fix for bug #1815

--- a/etc/snmp-graph.properties
+++ b/etc/snmp-graph.properties
@@ -2651,9 +2651,9 @@ report.novell.diskSpaceSys.type=node
 report.novell.diskSpaceSys.command=--title="Disk Space on SYS" \
  --units-exponent 0 \
  DEF:free={rrd1}:freeSpaceOnSys:AVERAGE \
- CDEF:freeMB=free,1024,/,1024,/ \
+ CDEF:freeMB=free,1024,/ \
  DEF:freeable={rrd2}:freeableSpaceOnSys:AVERAGE \
- CDEF:freeableMB=freeable,1024,/,1024,/ \
+ CDEF:freeableMB=freeable,1024,/ \
  LINE2:freeMB#000000:"Free Space (MBytes)" \
  GPRINT:freeMB:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:freeMB:MIN:"Min  \\: %8.2lf %s" \
@@ -2668,9 +2668,9 @@ report.novell.diskSpaceVol2.columns=freeSpaceOnVol2,freeableSpaceOnVol2
 report.novell.diskSpaceVol2.type=node
 report.novell.diskSpaceVol2.command=--title="Disk Space on Second Volume" \
  DEF:free={rrd1}:freeSpaceOnVol2:AVERAGE \
- CDEF:freeMB=free,1024,/,1024,/ \
+ CDEF:freeMB=free,1024,/ \
  DEF:freeable={rrd2}:freeableSpaceOnVol2:AVERAGE \
- CDEF:freeableMB=freeable,1024,/,1024,/ \
+ CDEF:freeableMB=freeable,1024,/ \
  LINE2:freeMB#000000:"Free Space (MBytes)" \
  GPRINT:freeMB:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:freeMB:MIN:"Min  \\: %8.2lf %s" \
