oops.... need to add test jar for opennms-snmp-ai to opennms-services and opennms-snmp-snmp4j

--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -44,6 +44,13 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-snmp-api</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-snmp4j</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
