--- a/opennms-snmp/opennms-snmp-snmp4j/pom.xml
+++ b/opennms-snmp/opennms-snmp-snmp4j/pom.xml
@@ -14,6 +14,13 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-snmp-api</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>opennms-test</artifactId>
       <scope>test</scope>
     </dependency>
