fix is so linux profile doesn't active on  mac

--- a/opennms-gwt-app/pom.xml
+++ b/opennms-gwt-app/pom.xml
@@ -76,7 +76,7 @@
         <id>gwt-linux</id>
         <activation>
           <os>
-            <family>unix</family>
+            <name>linux</name>
           </os>
         </activation>
         <dependencies>
